2012-06-06         Arnold D. Robbins     <arnold@skeeve.com>

	* filefuncs.c (do_stat): Make `type' const char *.

	* testext.c: Functions renamed, some of them filled in. Corresponding
	awk code for each test added inline.

2012-05-30         Arnold D. Robbins     <arnold@skeeve.com>

	* testext.c: New file. Outline of tests for extension API.

2012-05-29         Arnold D. Robbins     <arnold@skeeve.com>

	* filefuncs.c: Further cleanup and condensation of code into tables.
	* fork.c, ordchr.c, readfile.c: Update copyright, general cleanup.

2012-05-25         Arnold D. Robbins     <arnold@skeeve.com>

	* filefuncs.c (array_set_numeric): Don't return a value from
	a void function.

2012-05-24         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (AM_CPPFLAGS): Use $(srcdir) to work properly when
	built outside the source directory.
	* configure.ac (INSTALL): Set location manually since autoconf was
	not specifying the proper path for install-sh.
	* filefuncs2.c, ordchr2.c, readfile2.c: Deleted.
	* filefuncs.c: Install filefuncs2.c and patch for recent API changes.
	* ordchr.c: Install ordchr2.c and patch for recent API changes.
	* readfile.c: Install readfile2.c and patch for recent API changes.
	* fork.c: Port to new API.

2012-05-21         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* configure.ac: New file to run configure with libtool support
	in this subdirectory.
	* Makefile.am: Some changes related to running automake in this
	directory.
	* AUTHORS, COPYING, INSTALL, NEWS, README: Added files to make automake
	happy.
	* aclocal.m4, configure, configh.in: Added autoconf files.
	* build-aux, m4: New subdirectories for autoconf stuff.

2012-05-15         Arnold D. Robbins     <arnold@skeeve.com>

	* filefuncs2.c: New file implementing chdir and stat using the
	new interface.

	Everything else is temporarily broken.

2012-05-13         Andrew J. Schorr     <aschorr@telemetry-investments.com>
