@@ -1,1 +1,0 @@
-../gawk -f foo.awk
