@@ -1,3 +1,9 @@
+2012-06-10         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* arrayparm.c, dl.c, doit, foo.awk, steps, testarg.awk, testarg.c,
+	testarrayparm.awk, testff.awk, testfork.awk, testordchr.awk: Remove
+	unused (obsolete) files.
+
 2012-06-06         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* filefuncs.c (do_stat): Make `type' const char *.
